<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sakkar.theice.mainfeed.MainFeed">

    <android.support.v7.widget.ActionBarContainer
        android:fitsSystemWindows="true"
        android:id="@+id/actionBar"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleTextColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:title="@string/the_i_c_e">

        </android.support.v7.widget.Toolbar>

    </android.support.v7.widget.ActionBarContainer>

    <LinearLayout
        android:fitsSystemWindows="true"
        android:id="@+id/textSendArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#d1cfcf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar">

        <EditText
            android:id="@+id/editStatus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/white"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_gravity="center"
            android:hint="@string/status"
            android:textColorHint="#a7a6a6"/>

        <TextView
            android:id="@+id/postStatus"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/send"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSendArea"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/resView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSendArea"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-25dp">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
