<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f1f1f1"
        android:layout_margin="8dp"
        android:padding="4dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/senderImage"
            app:civ_border_width="2dp"
            app:civ_border_color="#ccc"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:maxLength="20"
            android:text="@string/date"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/senderDate"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/senderImage"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:layout_marginTop="6dp"
            android:id="@+id/sendImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_max="150dp"
            app:layout_constraintTop_toBottomOf="@id/senderImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:maxLength="20"
            android:textStyle="bold"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/senderName"
            app:layout_constraintStart_toEndOf="@+id/senderImage"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/senderImage" />


        <TextView
            android:padding="4dp"
            android:ellipsize="end"
            android:minHeight="60dp"
            android:maxHeight="100dp"
            android:textSize="18sp"
            android:text="@string/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sendImage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/content" />

        <LinearLayout
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center"
            android:layout_marginEnd="8dp">

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/commentCounter"
                android:layout_marginEnd="4dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_comment_white_24dp"

                />

        </LinearLayout>

        <LinearLayout
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/unlike"
            app:layout_constraintTop_toBottomOf="@id/content"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@+id/comment">

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/unlikeCounter"
                android:layout_marginEnd="4dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_thumb_down_black_24dp"

                />
        </LinearLayout>

        <LinearLayout
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/like"
            app:layout_constraintTop_toBottomOf="@id/content"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintRight_toLeftOf="@+id/unlike"
            android:layout_marginEnd="8dp">

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/likeCounter"
                android:layout_marginEnd="4dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_thumb_up_black_24dp"
                />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>